refactor: PostResponse의 각 모델 객체를 분리시키는 리팩토링 진행